--- a/src/main/resources/static/web/register.html
+++ b/src/main/resources/static/web/register.html
@@ -138,6 +138,24 @@
 			</div>
 		</footer>
 		<!--页脚结束-->
+	<script type="text/javascript">
+		$("#btn-reg").click(function () {
+			console.log($("#form-reg").serialize());
+			$.ajax({
+				url: "/users/reg",
+				type: "POST",
+				data: $("#form-reg").serialize(),
+				dataType: "json",
+				success: function (json) {
+					if (json.state == 200){
+						alert("注册成功！");
+					}else{
+						alert("注册失败！" + json.message)
+					}
+				}
+			})
+		});
+	</script>
 	</body>
 
 </html>
