--- a/src/main/resources/static/web/password.html
+++ b/src/main/resources/static/web/password.html
@@ -250,6 +250,24 @@
 			</div>
 		</footer>
 		<!--页脚结束-->
+	<script type="text/javascript">
+		$("#btn-change-password").click(function () {
+			$.ajax({
+				url: "/users/change_password",
+				type: "POST",
+				data: $("#form-change-password").serialize(),
+				dataType: "json",
+				success: function (json) {
+					if (json.state == 200){
+						alert("修改成功！")
+						location.href = "login.html";
+					}else {
+						alert("修改失败！" + json.message)
+					}
+				}
+			})
+		})
+	</script>
 	</body>
 
 </html>
